Change password is ok but not perfect and clean
