# user-server/target/generated-sources/openapi/src/main/java/io/avalia/user/api/UsersApi.java
@@ -5,7 +5,6 @@
  */
 package io.avalia.user.api;
 
-import io.avalia.user.api.model.User;
 import io.avalia.user.api.model.UserInput;
 import io.avalia.user.api.model.UserOutput;
 import io.swagger.annotations.*;
@@ -28,7 +27,7 @@ import javax.validation.constraints.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2019-12-17T01:29:30.897+01:00[Europe/Zurich]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2019-12-17T20:09:04.781+01:00[Europe/Zurich]")
 
 @Validated
 @Api(value = "users", description = "the users API")
@@ -38,12 +37,28 @@ public interface UsersApi {
         return Optional.empty();
     }
 
+    @ApiOperation(value = "", nickname = "changePassword", notes = "", authorizations = {
+        @Authorization(value = "Bearer")
+    }, tags={  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 400, message = "Invalid user supplied"),
+        @ApiResponse(code = 403, message = "You do not have necessary permissions for the resource"),
+        @ApiResponse(code = 404, message = "User not found") })
+    @RequestMapping(value = "/users/{email}",
+        method = RequestMethod.PUT)
+    default ResponseEntity<Void> changePassword(@ApiParam(value = "name that need to be updated",required=true) @PathVariable("email") String email,@NotNull @ApiParam(value = "Updated user object", required = true) @Valid @RequestParam(value = "password", required = true) String password) {
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+
     @ApiOperation(value = "", nickname = "createUser", notes = "create a user", response = Object.class, authorizations = {
         @Authorization(value = "Bearer")
     }, tags={  })
     @ApiResponses(value = { 
         @ApiResponse(code = 201, message = "created", response = Object.class),
-        @ApiResponse(code = 403, message = "You do not have necessary permissions for the resource") })
+        @ApiResponse(code = 403, message = "You do not have necessary permissions for the resource"),
+        @ApiResponse(code = 502, message = "You do not have necessary permissions for the resource") })
     @RequestMapping(value = "/users",
         produces = { "*/*" }, 
         consumes = { "application/json" },
@@ -63,7 +78,7 @@ public interface UsersApi {
         @ApiResponse(code = 404, message = "User not found") })
     @RequestMapping(value = "/users/{email}",
         method = RequestMethod.DELETE)
-    default ResponseEntity<Void> deleteUser(@ApiParam(value = "The name that needs to be deleted",required=true) @PathVariable("email") String email) {
+    default ResponseEntity<Void> deleteUser(@ApiParam(value = "name that need to be updated",required=true) @PathVariable("email") String email) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
@@ -80,7 +95,7 @@ public interface UsersApi {
     @RequestMapping(value = "/users/{email}",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    default ResponseEntity<UserOutput> getUserByID(@ApiParam(value = "The name that needs to be fetched. Use user1 for testing. ",required=true) @PathVariable("email") String email) {
+    default ResponseEntity<UserOutput> getUserByID(@ApiParam(value = "name that need to be updated",required=true) @PathVariable("email") String email) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
@@ -114,21 +129,6 @@ public interface UsersApi {
                 }
             }
         });
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    @ApiOperation(value = "", nickname = "updateUser", notes = "", authorizations = {
-        @Authorization(value = "Bearer")
-    }, tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 400, message = "Invalid user supplied"),
-        @ApiResponse(code = 403, message = "You do not have necessary permissions for the resource"),
-        @ApiResponse(code = 404, message = "User not found") })
-    @RequestMapping(value = "/users/{email}",
-        method = RequestMethod.PUT)
-    default ResponseEntity<Void> updateUser(@ApiParam(value = "name that need to be updated",required=true) @PathVariable("email") String email,@ApiParam(value = "Updated user object" ,required=true )  @Valid @RequestBody User body) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
